Fix overflow

--- a/app/src/components/Room.css
+++ b/app/src/components/Room.css
@@ -2,5 +2,6 @@
   display: block;
   width: 100%;
   height: 100%;
-  margin: 0 0 2em 0
+  margin: 0 0 2em 0;
+  overflow: auto;
 }
